src/output/ulNoActionsParser.java
// $ANTLR null /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g 2020-01-18 12:36:58

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings("all")
public class ulNoActionsParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BOOL", "CHARACTERCONSTANT", "COMMENT", 
		"ELSE", "FLOATCONSTANT", "ID", "IF", "INTEGERCONSTANT", "PRINT", "PRINTLN", 
		"RETURN", "STRINGCONSTANT", "TYPE", "WHILE", "WS", "'('", "')'", "'*'", 
		"'+'", "','", "'-'", "';'", "'<'", "'='", "'=='", "'['", "']'", "'{'", 
		"'}'"
	};
	public static final int EOF=-1;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int BOOL=4;
	public static final int CHARACTERCONSTANT=5;
	public static final int COMMENT=6;
	public static final int ELSE=7;
	public static final int FLOATCONSTANT=8;
	public static final int ID=9;
	public static final int IF=10;
	public static final int INTEGERCONSTANT=11;
	public static final int PRINT=12;
	public static final int PRINTLN=13;
	public static final int RETURN=14;
	public static final int STRINGCONSTANT=15;
	public static final int TYPE=16;
	public static final int WHILE=17;
	public static final int WS=18;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "parenExpr", "synpred12_ulNoActions", "functionDecl", "bool", 
		"synpred5_ulNoActions", "synpred25_ulNoActions", "expr", "literal", "lessExpr", 
		"synpred31_ulNoActions", "synpred18_ulNoActions", "exprColon", "idAssign", 
		"arrayDecl", "synpred9_ulNoActions", "synpred29_ulNoActions", "compareExpr", 
		"semiColon", "functionCall", "synpred7_ulNoActions", "synpred10_ulNoActions", 
		"atom", "synpred28_ulNoActions", "synpred17_ulNoActions", "synpred13_ulNoActions", 
		"moreFormals", "synpred6_ulNoActions", "arrayAssign", "synpred30_ulNoActions", 
		"formalParameters", "varDecl", "synpred14_ulNoActions", "returnStmt", 
		"ifElseBlock", "whileBlock", "synpred23_ulNoActions", "synpred3_ulNoActions", 
		"plmiExpr", "characterconstant", "synpred15_ulNoActions", "block", "synpred11_ulNoActions", 
		"multExpr", "compoundType", "synpred4_ulNoActions", "synpred24_ulNoActions", 
		"synpred1_ulNoActions", "stringconstant", "synpred19_ulNoActions", "type", 
		"synpred8_ulNoActions", "exprList", "synpred26_ulNoActions", "synpred27_ulNoActions", 
		"functionBody", "ifBlock", "synpred16_ulNoActions", "statement", "synpred21_ulNoActions", 
		"synpred2_ulNoActions", "printlnStmt", "printStmt", "program", "arrayRef", 
		"synpred20_ulNoActions", "identifier", "exprMore", "function", "floatconstant", 
		"synpred22_ulNoActions", "integerconstant"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, true, false, false, false, false, 
		    false, false, false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public ulNoActionsParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public ulNoActionsParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this, port, null);

		setDebugListener(proxy);
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
	}

	public ulNoActionsParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg, new RecognizerSharedState());
	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

	@Override public String[] getTokenNames() { return ulNoActionsParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g"; }


	protected void mismatch (IntStream input, int ttype, BitSet follow)
	        throws RecognitionException
	{
	        throw new MismatchedTokenException(ttype, input);
	}
	public Object recoverFromMismatchedSet (IntStream input,
	                                      RecognitionException e,
	                                      BitSet follow)
	        throws RecognitionException
	{
	        reportError(e);
	        throw e;
	}



	// $ANTLR start "program"
	// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:45:1: program : ( function )+ EOF ;
	public final void program() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "program");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(45, 0);

		try {
			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:45:9: ( ( function )+ EOF )
			dbg.enterAlt(1);

			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:45:11: ( function )+ EOF
			{
			dbg.location(45,11);
			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:45:11: ( function )+
			int cnt1=0;
			try { dbg.enterSubRule(1);

			loop1:
			while (true) {
				int alt1=2;
				try { dbg.enterDecision(1, decisionCanBacktrack[1]);

				int LA1_0 = input.LA(1);
				if ( (LA1_0==TYPE) ) {
					alt1=1;
				}

				} finally {dbg.exitDecision(1);}

				switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:45:11: function
					{
					dbg.location(45,11);
					pushFollow(FOLLOW_function_in_program42);
					function();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return;}
					EarlyExitException eee = new EarlyExitException(1, input);
					dbg.recognitionException(eee);

					throw eee;
				}
				cnt1++;
			}
			} finally {dbg.exitSubRule(1);}
			dbg.location(45,21);
			match(input,EOF,FOLLOW_EOF_in_program45); if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		dbg.location(46, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "program");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "program"



	// $ANTLR start "function"
	// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:48:1: function : functionDecl functionBody ;
	public final void function() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "function");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(48, 0);

		try {
			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:48:9: ( functionDecl functionBody )
			dbg.enterAlt(1);

			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:48:11: functionDecl functionBody
			{
			dbg.location(48,11);
			pushFollow(FOLLOW_functionDecl_in_function54);
			functionDecl();
			state._fsp--;
			if (state.failed) return;dbg.location(48,24);
			pushFollow(FOLLOW_functionBody_in_function56);
			functionBody();
			state._fsp--;
			if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		dbg.location(49, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "function");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "function"



	// $ANTLR start "functionDecl"
	// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:51:1: functionDecl : compoundType identifier '(' ( formalParameters )? ')' ;
	public final void functionDecl() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "functionDecl");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(51, 0);

		try {
			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:51:13: ( compoundType identifier '(' ( formalParameters )? ')' )
			dbg.enterAlt(1);

			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:51:15: compoundType identifier '(' ( formalParameters )? ')'
			{
			dbg.location(51,15);
			pushFollow(FOLLOW_compoundType_in_functionDecl65);
			compoundType();
			state._fsp--;
			if (state.failed) return;dbg.location(51,28);
			pushFollow(FOLLOW_identifier_in_functionDecl67);
			identifier();
			state._fsp--;
			if (state.failed) return;dbg.location(51,39);
			match(input,19,FOLLOW_19_in_functionDecl69); if (state.failed) return;dbg.location(51,43);
			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:51:43: ( formalParameters )?
			int alt2=2;
			try { dbg.enterSubRule(2);
			try { dbg.enterDecision(2, decisionCanBacktrack[2]);

			int LA2_0 = input.LA(1);
			if ( (LA2_0==TYPE) ) {
				alt2=1;
			}
			} finally {dbg.exitDecision(2);}

			switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:51:43: formalParameters
					{
					dbg.location(51,43);
					pushFollow(FOLLOW_formalParameters_in_functionDecl71);
					formalParameters();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}
			} finally {dbg.exitSubRule(2);}
			dbg.location(51,61);
			match(input,20,FOLLOW_20_in_functionDecl74); if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		dbg.location(52, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "functionDecl");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "functionDecl"



	// $ANTLR start "formalParameters"
	// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:54:1: formalParameters : compoundType identifier ( moreFormals )* ;
	public final void formalParameters() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "formalParameters");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(54, 0);

		try {
			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:54:17: ( compoundType identifier ( moreFormals )* )
			dbg.enterAlt(1);

			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:54:19: compoundType identifier ( moreFormals )*
			{
			dbg.location(54,19);
			pushFollow(FOLLOW_compoundType_in_formalParameters83);
			compoundType();
			state._fsp--;
			if (state.failed) return;dbg.location(54,32);
			pushFollow(FOLLOW_identifier_in_formalParameters85);
			identifier();
			state._fsp--;
			if (state.failed) return;dbg.location(54,43);
			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:54:43: ( moreFormals )*
			try { dbg.enterSubRule(3);

			loop3:
			while (true) {
				int alt3=2;
				try { dbg.enterDecision(3, decisionCanBacktrack[3]);

				int LA3_0 = input.LA(1);
				if ( (LA3_0==23) ) {
					alt3=1;
				}

				} finally {dbg.exitDecision(3);}

				switch (alt3) {
				case 1 :
					dbg.enterAlt(1);

					// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:54:43: moreFormals
					{
					dbg.location(54,43);
					pushFollow(FOLLOW_moreFormals_in_formalParameters87);
					moreFormals();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop3;
				}
			}
			} finally {dbg.exitSubRule(3);}

			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		dbg.location(55, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "formalParameters");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "formalParameters"



	// $ANTLR start "moreFormals"
	// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:57:1: moreFormals : ',' compoundType identifier ;
	public final void moreFormals() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "moreFormals");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(57, 0);

		try {
			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:57:12: ( ',' compoundType identifier )
			dbg.enterAlt(1);

			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:57:14: ',' compoundType identifier
			{
			dbg.location(57,14);
			match(input,23,FOLLOW_23_in_moreFormals97); if (state.failed) return;dbg.location(57,18);
			pushFollow(FOLLOW_compoundType_in_moreFormals99);
			compoundType();
			state._fsp--;
			if (state.failed) return;dbg.location(57,31);
			pushFollow(FOLLOW_identifier_in_moreFormals101);
			identifier();
			state._fsp--;
			if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		dbg.location(58, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "moreFormals");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "moreFormals"



	// $ANTLR start "functionBody"
	// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:60:1: functionBody : '{' ( varDecl )* ( statement )* '}' ;
	public final void functionBody() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "functionBody");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(60, 0);

		try {
			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:60:13: ( '{' ( varDecl )* ( statement )* '}' )
			dbg.enterAlt(1);

			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:60:15: '{' ( varDecl )* ( statement )* '}'
			{
			dbg.location(60,15);
			match(input,31,FOLLOW_31_in_functionBody110); if (state.failed) return;dbg.location(60,19);
			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:60:19: ( varDecl )*
			try { dbg.enterSubRule(4);

			loop4:
			while (true) {
				int alt4=2;
				try { dbg.enterDecision(4, decisionCanBacktrack[4]);

				int LA4_0 = input.LA(1);
				if ( (LA4_0==TYPE) ) {
					alt4=1;
				}

				} finally {dbg.exitDecision(4);}

				switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:60:19: varDecl
					{
					dbg.location(60,19);
					pushFollow(FOLLOW_varDecl_in_functionBody112);
					varDecl();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop4;
				}
			}
			} finally {dbg.exitSubRule(4);}
			dbg.location(60,29);
			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:60:29: ( statement )*
			try { dbg.enterSubRule(5);

			loop5:
			while (true) {
				int alt5=2;
				try { dbg.enterDecision(5, decisionCanBacktrack[5]);

				int LA5_0 = input.LA(1);
				if ( ((LA5_0 >= BOOL && LA5_0 <= CHARACTERCONSTANT)||(LA5_0 >= FLOATCONSTANT && LA5_0 <= STRINGCONSTANT)||LA5_0==WHILE||LA5_0==19||LA5_0==25) ) {
					alt5=1;
				}

				} finally {dbg.exitDecision(5);}

				switch (alt5) {
				case 1 :
					dbg.enterAlt(1);

					// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:60:29: statement
					{
					dbg.location(60,29);
					pushFollow(FOLLOW_statement_in_functionBody116);
					statement();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop5;
				}
			}
			} finally {dbg.exitSubRule(5);}
			dbg.location(60,40);
			match(input,32,FOLLOW_32_in_functionBody119); if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		dbg.location(61, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "functionBody");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "functionBody"



	// $ANTLR start "varDecl"
	// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:63:1: varDecl : compoundType identifier ';' ;
	public final void varDecl() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "varDecl");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(63, 0);

		try {
			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:63:8: ( compoundType identifier ';' )
			dbg.enterAlt(1);

			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:63:10: compoundType identifier ';'
			{
			dbg.location(63,10);
			pushFollow(FOLLOW_compoundType_in_varDecl128);
			compoundType();
			state._fsp--;
			if (state.failed) return;dbg.location(63,23);
			pushFollow(FOLLOW_identifier_in_varDecl130);
			identifier();
			state._fsp--;
			if (state.failed) return;dbg.location(63,34);
			match(input,25,FOLLOW_25_in_varDecl132); if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		dbg.location(64, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "varDecl");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "varDecl"



	// $ANTLR start "compoundType"
	// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:66:1: compoundType : ( type | arrayDecl );
	public final void compoundType() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "compoundType");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(66, 0);

		try {
			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:66:13: ( type | arrayDecl )
			int alt6=2;
			try { dbg.enterDecision(6, decisionCanBacktrack[6]);

			int LA6_0 = input.LA(1);
			if ( (LA6_0==TYPE) ) {
				int LA6_1 = input.LA(2);
				if ( (LA6_1==ID) ) {
					alt6=1;
				}
				else if ( (LA6_1==29) ) {
					alt6=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 1, input);
						dbg.recognitionException(nvae);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(6);}

			switch (alt6) {
				case 1 :
					dbg.enterAlt(1);

					// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:66:15: type
					{
					dbg.location(66,15);
					pushFollow(FOLLOW_type_in_compoundType141);
					type();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:67:4: arrayDecl
					{
					dbg.location(67,4);
					pushFollow(FOLLOW_arrayDecl_in_compoundType148);
					arrayDecl();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}
		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		dbg.location(68, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "compoundType");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "compoundType"



	// $ANTLR start "arrayDecl"
	// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:70:1: arrayDecl : type '[' integerconstant ']' ;
	public final void arrayDecl() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "arrayDecl");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(70, 0);

		try {
			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:70:10: ( type '[' integerconstant ']' )
			dbg.enterAlt(1);

			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:70:12: type '[' integerconstant ']'
			{
			dbg.location(70,12);
			pushFollow(FOLLOW_type_in_arrayDecl157);
			type();
			state._fsp--;
			if (state.failed) return;dbg.location(70,16);
			match(input,29,FOLLOW_29_in_arrayDecl158); if (state.failed) return;dbg.location(70,19);
			pushFollow(FOLLOW_integerconstant_in_arrayDecl159);
			integerconstant();
			state._fsp--;
			if (state.failed) return;dbg.location(70,34);
			match(input,30,FOLLOW_30_in_arrayDecl160); if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		dbg.location(71, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "arrayDecl");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "arrayDecl"



	// $ANTLR start "identifier"
	// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:73:1: identifier : ID ;
	public final void identifier() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "identifier");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(73, 0);

		try {
			// /home/braydon/Desktop/Spring2020/Compilers/src/ulNoActions.g:73:12: ( ID )
			dbg.enterAlt(1);
